--- a/teste.html
+++ b/teste.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
-
+    
     <head>
         <meta charset="utf-8">
+        <!-- título da página -->
         <title>Curso de HTML</title>
     </head>
 
     <body>
+        <!-- Aqui são os títulos -->
         <h1>Curso de HTML</h1>
         <h2>Curso de HTML</h2>
         <h3>Curso de HTML</h3>
@@ -14,7 +16,7 @@
         <h5>Curso de HTML</h5>
         <h6>Curso de HTML</h6>
 
-        <!-- serve para colocar imagens -->
+        <!-- serve para colocar imagens ou figuras com legenda (para HTML5) -->
         <img 
             src="gustavo-scafeli-89JtJtO7d4E-unsplash.jpg" 
             height="200" 
@@ -40,13 +42,15 @@
             consequat.
         </p>
          <!-- o strong serve para colocar em negrito -->
-         
+         <!-- em para itálico -->
+         <!-- small para deixar algum texto menor do que o original -->
         <p>
             Duis aute irure dolor in <em>reprehenderit in</em> voluptate velit esse cillum dolore eu fugiat nulla
             pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui <small>officia deserunt</small> mollit anim id est
             laborum.
         </p>
 
+        <!-- tabelas -->
         <table>
             <tr>
                 <th>Frutas</th>
@@ -62,12 +66,14 @@
             </tr>
         </table>
 
+        <!-- lista ordenada -->
         <ol>
            <li>Morango</li>
            <li>Morango</li>
            <li>Morango</li> 
         </ol>
 
+        <!-- lista não ordenada -->
         <ul>
             <li>Morango</li>
             <li>Morango</li>
