Indicando arquivo da aula 01 e inserindo conteúdos da aula 02

--- a/aula-01.html
+++ b/aula-01.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <!-- título da página -->
-        <title>Curso de HTML</title>
+        <title>Curso de HTML - Aula 01</title>
     </head>
 
     <body>
