Aula 01 de introdução ao CSS

--- a/aula-01.html
+++ b/aula-01.html
@@ -18,14 +18,14 @@
 
         <!-- serve para colocar imagens ou figuras com legenda (para HTML5) -->
         <img 
-            src="gustavo-scafeli-89JtJtO7d4E-unsplash.jpg" 
+            src="./assets/gustavo-scafeli-89JtJtO7d4E-unsplash.jpg" 
             height="200" 
             alt="Cachorro salsicha"
             title="Cachorro salsicha" />
             
         <figure>
             <img 
-            src="gustavo-scafeli-89JtJtO7d4E-unsplash.jpg" 
+            src="./assets/gustavo-scafeli-89JtJtO7d4E-unsplash.jpg" 
             height="200" 
             alt="Cachorro salsicha"
             title="Cachorro salsicha" />
