--- a/aula-02.html
+++ b/aula-02.html
@@ -66,7 +66,7 @@
         </p>
 
         <img 
-                src="gustavo-scafeli-89JtJtO7d4E-unsplash.jpg" 
+                src="./assets/gustavo-scafeli-89JtJtO7d4E-unsplash.jpg" 
                 height="500" 
                 alt="Cachorro salsicha"
                 title="Cachorro salsicha" />
