--- a/detalhes.html
+++ b/detalhes.html
@@ -11,7 +11,7 @@
 
         <div style="border:1px solid red;">
             <img 
-                src="gustavo-scafeli-89JtJtO7d4E-unsplash.jpg" 
+                src="./assets/gustavo-scafeli-89JtJtO7d4E-unsplash.jpg" 
                 height="200" 
                 alt="Cachorro salsicha"
                 title="Cachorro salsicha" />
@@ -34,7 +34,7 @@
                         type="text" 
                         id="nome" 
                         name="nome"
-                        placeholder="Insira seu nome aqui">
+                        placeholder="Insira seu nome aqui" required>
                 </div>
 
                 <div>
@@ -96,6 +96,12 @@
                     id="visual"
                     name="visual"
                     placeholder="Não mexa aqui" readonly>
+
+                    <input 
+                    type="number"
+                    id="visual"
+                    name="visual"
+                    placeholder="Não mexa aqui" disabled>
             </div>
 
             <fieldset>
