HTML do exercício 1 de CSS e código feito na aula 02 de CSS

--- a/exercicio-exemplo-aula-02.html
+++ b/exercicio-exemplo-aula-02.html
@@ -11,10 +11,21 @@
             <h2>Aqui fica um header</h2>
         </header>
         <main>
-            Aqui fica do site do site do Picpay
+            <section>
+                <p>
+                    Aqui fica o banner do site do Picpay
+                </p>
+            </section>
+            <section>
+                <p>
+                    Texto explicativo
+                </p>
+            </section>
         </main>
         <footer>
-            
+            <p>
+                Informações adicionais
+            </p>
         </footer>
     </body>
 
