Organizando aulas em pastas e incluindo aulas de JS e Portugol

--- a/Aulas HTML/aula-01.html
+++ b/Aulas HTML/aula-01.html
@@ -8,6 +8,13 @@
     </head>
 
     <body>
+
+        <style>
+            .h1{
+                font-size: 50px;
+            }
+        </style>
+
         <!-- Aqui são os títulos -->
         <h1>Curso de HTML</h1>
         <h2>Curso de HTML</h2>
@@ -21,14 +28,17 @@
             src="./assets/gustavo-scafeli-89JtJtO7d4E-unsplash.jpg" 
             height="200" 
             alt="Cachorro salsicha"
-            title="Cachorro salsicha" />
+            title="Cachorro salsicha"
+            class="img" 
+            id="imagem-cachorro" />
             
         <figure>
             <img 
             src="./assets/gustavo-scafeli-89JtJtO7d4E-unsplash.jpg" 
             height="200" 
             alt="Cachorro salsicha"
-            title="Cachorro salsicha" />
+            title="Cachorro salsicha"
+            class="img" />
             <figcaption>Cachorro salsicha</figcaption>
         </figure>
 
@@ -78,7 +88,10 @@
             <li>Morango</li>
             <li>Morango</li>
             <li>Morango</li> 
-         </ul>        
-    </body>
+         </ul>  
 
+
+         <h1 id="titulo"></h1>
+         <p id="texto"></p>
+    </body>
 </html>
