Adicionando conteúdo da aula 1 de JS

--- a/Aulas JS/aula01-JS.html
+++ b/Aulas JS/aula01-JS.html
@@ -6,17 +6,10 @@
     </head>
     <body>
 
-        <h1></h1>
-
-
-
-
-
-
+        <h1>Eba! Seu primeiro script foi rodado!</h1>
 
         <script>
-            
+            alert("Tag script sempre antes da tag de fechamento do body! :)")
         </script>
-
     </body>
 </html>
